synthesize chord as wav (#36)
