# internal/theory/handler_chord.go
@@ -1,9 +1,12 @@
 package theory
 
 import (
+	"bytes"
 	"errors"
 	"fmt"
 	"image/png"
+	"io"
+	"math"
 	"net/http"
 	"strconv"
 
@@ -11,6 +14,7 @@ import (
 	"github.com/edipermadi/music-db/pkg/illustations"
 	"github.com/edipermadi/music-db/pkg/theory/pitch"
 	"github.com/gorilla/mux"
+	"github.com/youpy/go-wav"
 	"go.uber.org/zap"
 )
 
@@ -31,6 +35,7 @@ func (h theoryHandler) installChordEndpoints(router *mux.Router) {
 	router.HandleFunc("/chords/{id:[0-9]+}/quality", h.GetChordQuality).Methods(http.MethodGet).Name("GET_CHORD_QUALITY")
 	router.HandleFunc("/chords/{id:[0-9]+}/scales", h.ListChordScales).Methods(http.MethodGet).Name("LIST_CHORD_SCALES")
 	router.HandleFunc("/chords/{id:[0-9]+}/illustrations/keyboard", h.IllustrateChordWithKeyboard).Methods(http.MethodGet).Name("ILLUSTRATE_CHORD_WITH_KEYBOARD")
+	router.HandleFunc("/chords/{id:[0-9]+}/illustrations/wav", h.IllustrateChordAsWavFile).Methods(http.MethodGet).Name("ILLUSTRATE_CHORD_AS_WAVE_FILE")
 }
 
 func (h theoryHandler) ListChords(writer http.ResponseWriter, request *http.Request) {
@@ -197,4 +202,87 @@ func (h theoryHandler) IllustrateChordWithKeyboard(writer http.ResponseWriter, r
 	writer.Header().Set("Content-Type", "image/png")
 	writer.Header().Set("Content-Disposition", fmt.Sprintf("inline; filename=%q", fmt.Sprintf("%sKeyboard.png", chord.Name)))
 	_ = png.Encode(writer, img)
+}
+
+func (h theoryHandler) IllustrateChordAsWavFile(writer http.ResponseWriter, request *http.Request) {
+	ctx := request.Context()
+
+	chordID, _ := strconv.ParseInt(mux.Vars(request)["id"], 10, 64)
+
+	// get chord
+	chord, err := h.service.GetChord(ctx, chordID)
+	switch {
+	case errors.Is(err, ErrChordNotFound):
+		h.ReplyJSON(writer, http.StatusNotFound, api.ErrResourceNotFound)
+		return
+	case err != nil:
+		h.Logger().With(zap.Error(err)).Error("failed to list chord pitches")
+		h.ReplyJSON(writer, http.StatusInternalServerError, api.ErrInternalServer)
+		return
+	}
+
+	// list pitches
+	simplifiedPitches, err := h.service.ListChordPitches(ctx, chordID)
+	if err != nil {
+		h.Logger().With(zap.Error(err)).Error("failed to list chord pitches")
+		h.ReplyJSON(writer, http.StatusInternalServerError, api.ErrInternalServer)
+		return
+	}
+
+	// instantiate synthesizer
+	sampleRate := 44100
+	synthesizer, err := h.synthesizerFactory.Instantiate(int32(sampleRate))
+	if err != nil {
+		h.Logger().With(zap.Error(err)).Error("failed to instantiate synthesizer")
+		h.ReplyJSON(writer, http.StatusInternalServerError, api.ErrInternalServer)
+		return
+	}
+
+	for _, v := range simplifiedPitches {
+		p := pitch.FromInt(int(v.ID))
+		if p >= pitch.CNatural && p < pitch.BNatural {
+			synthesizer.NoteOn(0, int32(p)+59, 100)
+		}
+	}
+
+	numSamples := 3 * sampleRate
+	left := make([]float32, numSamples)
+	right := make([]float32, numSamples)
+
+	// render
+	synthesizer.Render(left, right)
+
+	// determine peak amplitude
+	var maxValue float64
+	for i := 0; i < numSamples; i++ {
+		absLeft := math.Abs(float64(left[i]))
+		absRight := math.Abs(float64(right[i]))
+		if maxValue < absLeft {
+			maxValue = absLeft
+		}
+		if maxValue < absRight {
+			maxValue = absRight
+		}
+	}
+
+	// convert to integer relative to amplitude
+	a := 32768 * float32(0.99/maxValue)
+	samples := make([]wav.Sample, numSamples)
+	for i := 0; i < numSamples; i++ {
+		samples[i].Values[0] = int(a * left[i])
+		samples[i].Values[1] = int(a * right[i])
+	}
+
+	var buff bytes.Buffer
+	encoder := wav.NewWriter(&buff, uint32(numSamples), 2, 44100, 16)
+	if err := encoder.WriteSamples(samples); err != nil {
+		h.Logger().With(zap.Error(err)).Error("failed to convert PCM to wav file")
+		h.ReplyJSON(writer, http.StatusInternalServerError, api.ErrInternalServer)
+		return
+	}
+
+	writer.WriteHeader(http.StatusOK)
+	writer.Header().Set("Content-Type", "audio/wav")
+	writer.Header().Set("Content-Disposition", fmt.Sprintf("inline; filename=%q", fmt.Sprintf("%sPiano.wav", chord.Name)))
+	_, _ = io.Copy(writer, bytes.NewReader(buff.Bytes()))
 }
